--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,3 +10,4 @@ find_package(gRPC CONFIG REQUIRED)
 add_subdirectory(protos)
 add_subdirectory(server)
 add_subdirectory(client)
+add_subdirectory(server-mutator)
