--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,3 +11,6 @@ add_subdirectory(protos)
 add_subdirectory(server)
 add_subdirectory(client)
 add_subdirectory(server-mutator)
+
+# add_subdirectory(client-tos)
+# add_subdirectory(server-tos)
