Add IPv6 client

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,5 +12,7 @@ add_subdirectory(server)
 add_subdirectory(client)
 add_subdirectory(server-mutator)
 
+add_subdirectory(client-ipv6)
+
 # add_subdirectory(client-tos)
 # add_subdirectory(server-tos)
