Use new channel argument GRPC_ARG_DSCP

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 project(Examples LANGUAGES CXX)
 
+# Options
+option(ENABLE_DSCP_TESTS "Build DSCP tests" OFF)
+
 # GRPC and Protocol Buffers libraries location
 list(APPEND CMAKE_PREFIX_PATH "../install")
 
@@ -11,5 +14,7 @@ add_subdirectory(protos)
 add_subdirectory(server)
 add_subdirectory(client)
 add_subdirectory(server-mutator)
-# add_subdirectory(client-tos)
-# add_subdirectory(server-tos)
+if(ENABLE_DSCP_TESTS)
+  add_subdirectory(client-dscp)
+  add_subdirectory(server-dscp)
+endif()
