--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(server-mutator)
 if(ENABLE_DSCP_TESTS)
   add_subdirectory(client-dscp)
   add_subdirectory(server-dscp)
+  add_subdirectory(osx-test)
 endif()
