--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(protos)
 add_subdirectory(server)
 add_subdirectory(client)
 add_subdirectory(server-mutator)
+add_subdirectory(client-mutator)
 if(ENABLE_DSCP_TESTS)
   add_subdirectory(client-dscp)
   add_subdirectory(server-dscp)
