Add user to group "Network Configuration Operators"

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -18,13 +18,7 @@ jobs:
           cd issues/dscp/qos2-windows/
           cmake .
           msbuild Examples.sln /m /property:Configuration=Debug
-      - name: Check
-        run: |
-          dir
-          cd issues/dscp/qos2-windows/
-          dir
-          cd Debug
-          dir
       - name: Run
         run: |
-          issues\dscp\qos2-windows\Debug\qostest.exe
+          Add-LocalGroupMember -Group "Network Configuration Operators" -Member $env:UserName
+          issues\dscp\qos2-windows\Debug\qos-test.exe
