--- a/issues/dscp/qos2-windows/CMakeLists.txt
+++ b/issues/dscp/qos2-windows/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 project(Examples LANGUAGES CXX)
 
-add_executable(qostest
+add_executable(qos-test
   main.cpp
 )
 
-target_link_libraries(qostest
+target_link_libraries(qos-test
   wsock32
   ws2_32
   qwave.lib
