Build updates and some info

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 project(Examples LANGUAGES CXX)
 
 # Options
-option(ENABLE_DSCP_TESTS "Build DSCP tests" OFF)
+option(ENABLE_DSCP_TESTS "Build DSCP tests" ON)
 
 if(NOT WIN32)
   # GRPC and Protocol Buffers libraries location
@@ -16,12 +16,16 @@ add_subdirectory(protos)
 add_subdirectory(server)
 add_subdirectory(client)
 
-if(NOT WIN32)
-add_subdirectory(server-mutator)
-add_subdirectory(client-mutator)
 if(ENABLE_DSCP_TESTS)
   add_subdirectory(client-dscp)
   add_subdirectory(server-dscp)
+endif()
+
+if(APPLE)
   add_subdirectory(osx-test)
 endif()
+
+if(NOT WIN32)
+  add_subdirectory(server-mutator)
+  add_subdirectory(client-mutator)
 endif()
