Add test of repeated with ASAN
Signed-off-by: Björn Svensson <bjorn.a.svensson@est.tech>

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   windows:
+    if: false # Temporary disabled
     name: Windows Visual Studio ${{ matrix.version }}
     runs-on: windows-${{ matrix.version }}
     strategy:
