Add asan builds that uses grpc submodule deps
Signed-off-by: Björn Svensson <bjorn.a.svensson@est.tech>

--- a/.github/workflows/asan.yml
+++ b/.github/workflows/asan.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   static:
+    if: false
     name: Static grpc-${{ matrix.grpc-version }}, ASAN all
     runs-on: ubuntu-24.04
     strategy:
@@ -56,6 +57,7 @@ jobs:
         ./client 127.0.0.1:8899
 
   shared:
+    if: false
     name: Shared grpc-${{ matrix.grpc-version }}, ASAN exec only
     runs-on: ubuntu-24.04
     strategy:
@@ -156,6 +158,7 @@ jobs:
         ASAN_OPTIONS=detect_odr_violation=0 ./client 127.0.0.1:8899
 
   shared-asan-all:
+    if: false
     name: Shared grpc-${{ matrix.grpc-version }}, ASAN all
     runs-on: ubuntu-24.04
     strategy:
@@ -272,3 +275,111 @@ jobs:
         LD_PRELOAD=$(clang-19 --print-file-name=libclang_rt.asan-x86_64.so) ASAN_OPTIONS=detect_odr_violation=0 ./server 127.0.0.1:8899 &
         sleep 2s
         LD_PRELOAD=$(clang-19 --print-file-name=libclang_rt.asan-x86_64.so) ASAN_OPTIONS=detect_odr_violation=0 ./client 127.0.0.1:8899
+
+  # Trigger ODR issue
+  shared-asan-submodules-shared-libasan:
+    name: Shared grpc-${{ matrix.grpc-version }}, ASAN using submodules
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - grpc-version: 'v1.69.0'
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install ninja
+      run: |
+        sudo apt install -y ninja-build
+    - name: Install clang-19
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 19
+    - name: Build and install grpc with ASAN
+      shell: bash # enable pipefail
+      run: |
+        git clone --recurse-submodules -b ${{ matrix.grpc-version }} https://github.com/grpc/grpc
+        cd grpc && mkdir build && cd build
+        CXXFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          CFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          LDFLAGS="-fsanitize=address -shared-libsan -Wl,-rpath=$(dirname $(clang-19 --print-file-name=libclang_rt.asan-x86_64.so))" \
+          CC=clang-19 CXX=clang++-19 cmake -G Ninja \
+          -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+          -DCMAKE_CXX_STANDARD=17 \
+          -DCMAKE_INSTALL_PREFIX=/usr \
+          -DBUILD_SHARED_LIBS=ON \
+          -DgRPC_BUILD_TESTS=OFF \
+          ..
+        sudo ninja -v install | tee log.txt
+    - name: Build and run 'repeated' example with LD_PRELOAD
+      run: |
+        cd examples/repeated
+        mkdir build && cd build
+        CXXFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          CFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          LDFLAGS="-fsanitize=address -shared-libsan -Wl,-rpath=$(dirname $(clang-19 --print-file-name=libclang_rt.asan-x86_64.so))" \
+          CC=clang-19 CXX=clang++-19 cmake \
+          -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+          -DCMAKE_CXX_STANDARD=17 \
+          ..
+        VERBOSE=1 make
+
+        LD_PRELOAD=$(clang-19 --print-file-name=libclang_rt.asan-x86_64.so) ./server 127.0.0.1:8899 &
+        sleep 2s
+        LD_PRELOAD=$(clang-19 --print-file-name=libclang_rt.asan-x86_64.so) ./client 127.0.0.1:8899
+
+  # Trigger ODR issue
+  # With clang, -static-libsan is the default.
+  # https://github.com/google/sanitizers/issues/1086#issuecomment-509775957
+  shared-asan-submodules:
+    name: Shared grpc-${{ matrix.grpc-version }}, ASAN using submodules, static libasan
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - grpc-version: 'v1.69.0'
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install ninja
+      run: |
+        sudo apt install -y ninja-build
+    - name: Install clang-19
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 19
+    - name: Build and install grpc with ASAN
+      shell: bash # enable pipefail
+      run: |
+        git clone --recurse-submodules -b ${{ matrix.grpc-version }} https://github.com/grpc/grpc
+        cd grpc && mkdir build && cd build
+        CXXFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          CFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          LDFLAGS="-fsanitize=address" \
+          CC=clang-19 CXX=clang++-19 cmake -G Ninja \
+          -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+          -DCMAKE_CXX_STANDARD=17 \
+          -DCMAKE_INSTALL_PREFIX=/usr \
+          -DBUILD_SHARED_LIBS=ON \
+          -DgRPC_BUILD_TESTS=OFF \
+          ..
+        sudo ninja -v install | tee log.txt
+    - name: Build and run 'repeated' example
+      run: |
+        cd examples/repeated
+        mkdir build && cd build
+        CXXFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          CFLAGS="-fsanitize=address -fno-omit-frame-pointer" \
+          LDFLAGS="-fsanitize=address" \
+          CC=clang-19 CXX=clang++-19 cmake \
+          -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+          -DCMAKE_CXX_STANDARD=17 \
+          ..
+        VERBOSE=1 make
+
+        ./server 127.0.0.1:8899 &
+        sleep 2s
+        ./client 127.0.0.1:8899
